# knapsack

./: .gitignore  Makefile  README.md  knapsack-gen.c  knapsack-naive.c  run-all.sh
asm/: CMakeLists.txt  input  knapsack.S  main.c
c/: CMakeLists.txt  knapsack.c  main.c
csharp/: Program.cs  input  knapsack-csharp.csproj  knapsack-csharp.sln
dotnet/: knapsack-dotnet.sln  knapsack-dotnet.userprefs
dotnet/knapsack-csharp/: Program.cs  knapsack-csharp.csproj
dotnet/knapsack-csharp/Properties/: AssemblyInfo.cs
dotnet/knapsack-fsharp/: AssemblyInfo.fs  Program.fs  input  knapsack-fsharp.fsproj  packages.config
rust/: Cargo.toml
rust/src/: main.rs
solutions/: knapsack-dante-1.0  knapsack-dante-1.1
